# termcaps_test

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  tc
includes/: mytermcaps.h
srcs/: debug.c  error.c  init.c  key_func.c  main.c  move.c  print.c  update_cursor.c  util.c
